--- a/src/pages/posts.astro
+++ b/src/pages/posts.astro
@@ -9,10 +9,6 @@ const posts = await getPosts();
 <BaseLayout title='Posts'>
   <h1 class='text-3xl mb-10'>Posts</h1>
   <ul>
-    {
-      posts.map((post) => (
-        <PostCard title={post.title} summary={post.summary} />
-      ))
-    }
+    {posts.map((post) => <PostCard details={post} />)}
   </ul>
 </BaseLayout>
